--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
+    "firebase": "^11.1.0",
+    "motion": "^11.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^6.28.1"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.28.1",
+    "react-tooltip": "^5.28.0",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -22,6 +29,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
