--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.28.1",
     "react-tooltip": "^5.28.0",
     "swiper": "^11.2.1"
