--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.28.1",
     "react-tooltip": "^5.28.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
